# ai-stack-sandbox

./: .env.example  .gitignore  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.claude/commands/: expand-plan.md  stress-test-plan.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: agent.py  chunking.py  config.py  evals.py  gateway.py  ingest.py  layout.py  observability.py  retrieval.py
data/: corpus.jsonl  sample.md
db/: init.sql
docker/: Dockerfile
docs/: CANONICAL_MODEL.md  ROADMAP.md
docs/specs/: README.md  REVIEW_LOG.md
docs/specs/01-model-failover/: README.md  design.md  testing.md
docs/specs/01-model-failover/examples/: README.md  agent_span.py  docker-compose.snippet.yml  env.example.snippet  gateway_served_model.py  litellm_config.no-aws.yaml  litellm_config.prod.yaml  test_config_lint.py  test_failover_smoke.py
docs/specs/02-canonical-document-model/: README.md  design.md  testing.md
docs/specs/02-canonical-document-model/examples/: README.md  canonical_document.sample.json  example_chunking.py  example_tests.py  (+2 more)
docs/specs/03-real-layout-backends/: README.md  design.md  testing.md
docs/specs/04-reranker/: README.md  design.md  testing.md
docs/specs/05-retrieval-uses-chunk-metadata/: README.md  design.md  testing.md
docs/specs/06-eval-set-maturity/: README.md  design.md  testing.md
docs/specs/07-ci-hardening/: README.md  design.md  testing.md
docs/specs/08-caching/: README.md  design.md  testing.md
docs/specs/09-guardrails/: README.md  design.md  testing.md
docs/specs/10-budgets-and-virtual-keys/: README.md  design.md  testing.md
docs/specs/11-agent-orchestration/: README.md  design.md  testing.md
docs/specs/12-context-management/: README.md
docs/specs/13-structured-outputs/: README.md  design.md  testing.md
docs/specs/14-observability-backend/: README.md  design.md  testing.md
docs/specs/15-governance-and-audit/: README.md
docs/specs/16-data-residency/: README.md
docs/specs/17-safety-and-red-teaming/: README.md  design.md  testing.md
docs/specs/18-multi-modal-ingestion/: README.md
evals/: baseline.json  gate.json  golden.jsonl
gateway/: litellm_config.yaml
tests/: test_evals.py
(+104 files in other folders)
