[project]
name = "ai-stack-sandbox"
version = "0.1.0"
description = "A runnable slice of a mature AI stack: gateway, hybrid retrieval, LangGraph, OTel observability, and an eval gate."
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "langgraph>=0.2.50",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Heavy layout-extraction backends for formats with no dependency-free default.
# Install only what you need, then register it (see app/layout.py docstring):
#   pip install '.[layout]'  ->  layout.register("pdf", MyDoclingExtractor()), etc.
layout = ["docling>=2.0", "pymupdf>=1.24", "python-docx>=1.1", "openpyxl>=3.1"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.uv]
package = false   # this is an app to run, not a library to build/install

[tool.ruff]
line-length = 110
