[project]
name = "ai-stack-sandbox"
version = "0.1.0"
description = "A runnable slice of a mature AI stack: gateway, hybrid retrieval, LangGraph, OTel observability, and an eval gate."
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "langgraph>=0.2.50",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Light layout-extraction backends for the stub formats. Install what you need,
# then register it (see app/layout.py): `pip install '.[layout]'`.
#   pdf -> pymupdf  |  docx -> python-docx  |  xlsx -> openpyxl
# docling gives best-in-class PDF layout but pulls torch/transformers (~GB); it is
# intentionally NOT pinned here so the lockfile stays slim -- add it yourself, then
# layout.register("pdf", MyDoclingExtractor()).
layout = ["pymupdf>=1.24", "python-docx>=1.1", "openpyxl>=3.1"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.uv]
package = false   # this is an app to run, not a library to build/install

[tool.ruff]
line-length = 110
